--- a/edu.css
+++ b/edu.css
@@ -5,8 +5,7 @@
   /* Set a background color */
   body {
     background-color: blue;
-    color: black;
-    /* font-family: Helvetica, sans-serif; */
+    color: black; 
   }
   
   /* The actual timeline (the vertical ruler) */
@@ -30,11 +29,12 @@
 
   /* Container around content */
 #Education .container {
-    padding: 10px 40px;
-    position: relative;
-    top: 20px;
-    background-color: inherit;
-    width: 50%;
+  padding: 10px 40px;
+  padding-bottom: 180px;
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+
   }
   
   /* The circles on the timeline */
@@ -95,7 +95,7 @@
   }
   
   /* The actual content */
-  .content {
+  .box2 {
     padding: 20px 30px;
     background-color: white;
     color: black;
@@ -104,7 +104,7 @@
   }
   
   /* Media queries - Responsive timeline on screens less than 600px wide */
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 600px) {
   /* Place the timelime to the left */
     .timeline::after {
       left: 31px;
