--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     box-sizing: border-box;  
 }
 
+.fa {
+  margin-left: -12px;
+  margin-right: 8px;
+}
+
 body, html{
     height:100% ;
     width: 100%;
@@ -52,7 +57,7 @@ body, html{
     width: 100%;
   }
   .text1{
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 500;
     font-family: Engravers MT;
     letter-spacing: 8px;  
@@ -90,16 +95,18 @@ body, html{
 .image{
   height: 200px;
   border-radius: 50%;
+  border: 5px solid black;
   top: 200px;
 }
 
-#About .content{
-  border: 3px solid black;
+.box1{
+  color: black;
+  border: 5px solid black;
   background-color: lightcyan;
-  top: 60px;
-  padding: 1%;
+  top: 60px;  
   left: 180px;
   right: 50px;
+  /* bottom: 170px; */
   position: fixed;  
 }
 
@@ -112,30 +119,10 @@ body, html{
 #About tab3{
   padding-left: 1.6em;
 }
-/* #About tab4{
-  padding-left: 10em;
-}
-#About tab5{
-  padding-left: 10em;
-}
-
-#About tab5{
-  padding-left: 10em; 
-}*/
 
 #Education{
   background-color: blue;  
-  padding: 50px;
-  /* padding-right: 50px;
-  padding-bottom: 50px;
-  padding-left: 50px;
-   */
-}
-
-.btn{
-  padding: 10px 45px;
-  cursor: pointer;
-  font-size: 15px; 
+  padding: 50px; 
 }
 
 
@@ -148,6 +135,11 @@ body, html{
 #Education h2{
   text-decoration: underline;
 }
+
+#Education h3{
+  font-size: 25px;
+}
+
 #Education h4{
   text-decoration: underline;
 }
@@ -156,9 +148,10 @@ body, html{
 
 #Skills{
   background-color: grey;  
+  padding: 50px;
   padding-top: 40px;
   /* padding-right: 50px; */
-  padding-bottom: 10px;
+  padding-bottom: 450x;
   /* padding-left: 50px; */
 }
 
@@ -197,14 +190,42 @@ body, html{
   text-decoration: underline;
   top: 10px;
 }
-#Experience .content{
-  border: 2px solid black;
+.box3{
+  border: 5px solid black;
   background-color: lightcyan;
+  color: black;
   left: 50px;
   right: 50px; 
-  bottom: 20px;
+  bottom: 40px;
   position: relative; 
+
 }
+
+#Experience tab1{
+  padding-left: 5.3em;
+}
+#Experience tab2{
+  padding-left: 5.6em;
+}
+#Experience tab3{
+  padding-left: 7em;
+}
+#Experience tab4{
+  padding-left: 5.4em;
+}
+#Experience tab5{
+  padding-left: 0em;
+}
+#Experience tab6{
+  padding-left: 2.3em;
+}
+#Experience tab7{
+  padding-left: 4em;
+}
+#Experience tab8{
+  padding-left: 1.5em;
+}
+
 
 /* Style all font awesome icons */
 .fa{
@@ -249,3 +270,11 @@ text-align: center;
 padding: 0.2%;
 margin-top: 0px;
 }
+
+/* @media only screen and (min-width: 600px) {
+  .tablink{
+    padding: 4px 6px;
+    font-size: 10px;
+    width: 8%;
+  }
+} */
