--- a/edu.css
+++ b/edu.css
@@ -4,15 +4,16 @@
   
   /* Set a background color */
   body {
-    background-color: blue;
-    color: black; 
+       background-color: blue;
+        color: black; 
   }
   
   /* The actual timeline (the vertical ruler) */
   .timeline {
-    position: relative;
+    position: absolute;
     max-width: 1200%;
-    margin: 0 auto;
+   
+    /* margin: 0 auto; */
   }
   
   /* The actual timeline (the vertical ruler) */
@@ -104,11 +105,18 @@
   }
   
   /* Media queries - Responsive timeline on screens less than 600px wide */
-  @media screen and (max-width: 600px) {
+  @media (max-width: 800px) {
   /* Place the timelime to the left */
     .timeline::after {
       left: 31px;
     }
+
+    .timeline {
+      position: absolute;
+      max-width: 450px;
+      left: 10px;
+    }
+      
 
   /* Full-width containers */
 #Education .container {
@@ -135,3 +143,4 @@
     left: 0%;
   }
 }
+
