--- a/style.css
+++ b/style.css
@@ -3,11 +3,6 @@
     box-sizing: border-box;  
 }
 
-.fa {
-  margin-left: -12px;
-  margin-right: 8px;
-}
-
 body, html{
     height:100% ;
     width: 100%;
@@ -25,7 +20,7 @@ body, html{
     cursor: pointer;
     padding: 8px 12px;
     font-size: 17px;
-    width: 10%;
+    width: 15%;
     
     }
 
@@ -103,11 +98,11 @@ body, html{
   color: black;
   border: 5px solid black;
   background-color: lightcyan;
-  top: 60px;  
+  top: 100px;  
   left: 180px;
-  right: 50px;
-  /* bottom: 170px; */
-  position: fixed;  
+  right: 100px;
+ height: fit-content;
+  position: absolute;  
 }
 
 #About tab1{
@@ -151,11 +146,11 @@ body, html{
   padding: 50px;
   padding-top: 40px;
   /* padding-right: 50px; */
-  padding-bottom: 450x;
+  padding-bottom: 450px;
   /* padding-left: 50px; */
 }
 
-/* Container for skill bars */
+
 .container {
   width: 100%; 
   height: 0.7%;
@@ -178,12 +173,11 @@ body, html{
 .c {width: 75%; background-color: blueviolet;} 
 .cn {width: 75%; background-color: blue;}
 .mySQL {width: 60%; background-color: red} 
-/* .arduino {width: 45%; background-color: darkgrey;}
-.python {width: 40%; background-color: skyblue;} */
 
 #Experience{
   background-color:red;
-  padding-top: 50px;
+  height: 100%;
+  
 }
 
 #Experience h2{
@@ -194,11 +188,18 @@ body, html{
   border: 5px solid black;
   background-color: lightcyan;
   color: black;
-  left: 50px;
+  /* left: 50px;
   right: 50px; 
-  bottom: 40px;
-  position: relative; 
+  bottom: 300px;
+  top: 200px; */
+  font-size: 17px;
+  /* position: relative;  */
 
+}
+
+.box3.p{
+  position: relative;
+  font-size: small;
 }
 
 #Experience tab1{
@@ -261,20 +262,34 @@ border-radius: 25%;
 
 .mainFooter{
 position: fixed;
-left: 20;
 bottom: 0;
+left: 0;
 width: 100%;
 background-color:white;
 color: black;
 text-align: center;
-padding: 0.2%;
-margin-top: 0px;
+/* padding: 0.2%; */
+/* margin-top: 0px; */
 }
 
-/* @media only screen and (min-width: 600px) {
-  .tablink{
-    padding: 4px 6px;
-    font-size: 10px;
-    width: 8%;
+@media (max-width: 800px) {
+  .tablink{   
+    width: auto;
+  }  
+
+  .box1{
+    height: 20px;
   }
-} */
+  .box3{
+    
+    height: 900px;
+    width: 300px;
+    bottom: 200px;
+    top: 100px;
+  }
+  
+
+}
+
+
+
