--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ body, html{
 
 
 .container {
-  width: 100%; 
+  width: 100%;  
   height: 0.7%;
   background-color: grey;   
 }
@@ -288,6 +288,11 @@ text-align: center;
     top: 100px;
   }
   
+  .container {
+    width: 100%; 
+    height: 1200%;
+    bottom: 250px;
+    background-color: grey;
 
 }
 
