--- a/style.css
+++ b/style.css
@@ -277,9 +277,9 @@ text-align: center;
     width: auto;
   }  
 
-  .box1{
+  /* .box1{
     height: 1200px;
-  }
+  } */
   .box3{
     
     height: 900px;
@@ -287,14 +287,17 @@ text-align: center;
     bottom: 200px;
     top: 100px;
   }
+
+  .image{
+    height: 200px;  
+    top: 200px;
+  }
   
-  .container {
+  /* .container {
     width: 100%; 
     height: 1200%;
     bottom: 250px;
     background-color: grey;
 
+} */
 }
-
-
-
