--- a/edu.css
+++ b/edu.css
@@ -12,7 +12,7 @@
   .timeline {
     position: relative;
     max-width: 1200%;   
-    /* margin: 0 auto; */
+    margin: 0 auto;
   }
   
   /* The actual timeline (the vertical ruler) */
@@ -101,22 +101,14 @@
     color: black;
     position: relative;
     border-radius: 15px;
-  }
-  
-  /* Media queries - Responsive timeline on screens less than 600px wide */
+  } 
+
   @media (max-width: 800px) {
   /* Place the timelime to the left */
     .timeline::after {
       left: 31px;
     }
-
-    /* .timeline {
-      position: relative;
-      max-width: 450px;
-      left: 10px;
-      top: 200px;
-    } */
-      
+   
 
   /* Full-width containers */
 #Education .container {
@@ -143,5 +135,7 @@
   .right {
     left: 0%;
   }
-}
+  .box2 {
+    width: 126%;
+    }
 
