--- a/style.css
+++ b/style.css
@@ -121,10 +121,8 @@ body, html{
 
 
 #Education table, th, td {
-  border: 1px solid black;
+  border: 2px solid black;
 }
-
-
 
 #Education h2{
   text-decoration: underline;
@@ -138,25 +136,19 @@ body, html{
   text-decoration: underline;
 }
 
-
-
 #Skills{
   background-color: grey;  
-  padding: 50px;
+  height: 150%; 
   padding-top: 40px;
-  /* padding-right: 50px; */
-  padding-bottom: 450px;
-  /* padding-left: 50px; */
+  padding-bottom: 500px;
+
 }
 
 
 .container {
   width: 100%;  
-  /* 
-  
-  .
-  .*/
-  background-color: grey;   
+  /* background-color: grey;  */
+   
 }
 
 #Skills h2{
@@ -178,30 +170,29 @@ body, html{
 
 #Experience{
   background-color:red;
-  height: 100%;
-  
+  padding-top: 40px;
+  height: 130%;  
 }
 
 #Experience h2{
   text-decoration: underline;
-  top: 10px;
+  
+  /* top:5px; */
 }
 .box3{
   border: 5px solid black;
   background-color: lightcyan;
-  color: black;
-  /* left: 50px;
-  right: 50px; 
-  bottom: 300px;
-  top: 200px; */
-  font-size: 17px;
-  /* position: relative;  */
+  color: black;  
+  font-size: 17px;  
 
 }
 
-.box3.p{
-  position: relative;
-  font-size: small;
+.box4{
+  border: 5px solid black;
+  background-color: lightcyan;
+  color: black;  
+  font-size: 17px; 
+
 }
 
 #Experience tab1{
@@ -270,38 +261,27 @@ width: 100%;
 background-color:white;
 color: black;
 text-align: center;
-/* padding: 0.2%; */
-/* margin-top: 0px; */
 }
 
 @media (max-width: 800px) {
   .tablink{   
     width: auto;
   }  
-
-  .box1{
+  #About{
+    height: 160%;
+  }
+  .box1{    
     padding-bottom: 40px;  
     position: absolute;
   }
 
-  .box3{
-    
-    height: 900px;
-    width: 300px;
-    bottom: 200px;
-    top: 100px;
+  #Experience{
+    height: 220%;  
   }
-
+ 
   .image{
     height: 200px;  
     top: 200px;
   }
   
-  /* .container {
-    width: 100%; 
-    height: 1200%;
-    bottom: 250px;
-    background-color: grey;
-
-} */
 }
